--- a/clase10/styles.css
+++ b/clase10/styles.css
@@ -19,27 +19,20 @@
     background-color: aqua;
 }
 
-/*media query: me sirve para cambiar los estilos cuando cambia la resolucion*/
-@media screen and (max-width:600px) {
-    .container-flex {
-        flex-direction: column;
-        background-color: blueviolet;
-    }
-    .container-item {
-        font-size: 2em;
-        color:blue
-    }
-}
 
 section {
     height: 650px;
-    border: 1px solid blue;
-    margin: 10px;
+    /*border: 1px solid blue;
+    margin: 10px;*/
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 section img {
     margin: 15px;
-    width: 50%;
+    width: 30%;
 }
 
 /*estilos para las section
@@ -64,4 +57,71 @@ section:nth-child(even) {
 }
 section:first-child {
     background-color: rgb(255, 100, 0) !important;
+}
+/*---------------------------Menu----------------------*/
+.menu-container {
+background-color: blueviolet;
+display: flex;
+padding: 10px;
+justify-content: space-between;
+position: sticky;
+top: 0;
+}
+
+.menu-container ul li{
+    display: inline-block;
+    height: 20px;
+}
+
+.menu-container{
+    /*display: inline-block;
+    height: 50px;*/
+    text-decoration: none;
+}
+
+.menu-container a:hover{
+font-size: 1.2em;
+color: whitesmoke;
+}
+
+header img{
+    display: block; /*espacio fantasma: elimina el espacio en blanco*/
+    height: 650px;
+    width: 100%;
+
+}
+
+.content-text a {
+    display: inline-block;
+    width: 100px;
+    height: 45px;
+    /* border: 1px solid #c0e6f8; */
+    border-radius: 20px;
+    line-height: 45px;
+    background: white;
+    font-size: 1.1em;
+    text-decoration: none;
+    font-weight: bolder;
+    font-family: fantasy;
+    color: black;
+}
+
+.content-text a:hover {
+    border: 1px solid blue;
+}
+
+/*media query: me sirve para cambiar los estilos cuando cambia la resolucion*/
+@media screen and (max-width:1000px) {
+    .container-flex {
+        flex-direction: column;
+        background-color: blueviolet;
+    }
+    section img {
+    margin: 15px;
+    width: 30%;
+    }
+    .contet-text{
+        text-align: center;
+    }
+   
 }
